# azcam-ascom

./: README.md  git_pull_all.py  setup.cfg  setup.py
azcam_ascom/: controller_ascom.py  exposure_ascom.py  tempcon_ascom.py
