[metadata]
name = azcam-ascom
version = attr: azcam_ascom.__version__
author = Michael Lesser
author_email=mlesser@arizona.edu
license_files = LICENSE
description=azcam
long_description=file: README.md, LICENSE.md
long_description_content_type=text/markdown
keywords=ccd imaging astronomy observation observatory
url=https://mplesser.github.io/azcam-ascom/
include_package_data=True

[options]
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    azcam
    pywin32

[bdist_wheel]
universal = 0
